<resources>
    <string name="app_name">Prowess</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="indicators">Indicators</string>
    <string name="notifications">Notifications</string>
    <string name="meetings">Meetings</string>
    <string-array name="diabetes_types">
        <item>First type</item>
        <item>Second type</item>
        <item>Pregnancy type</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>